--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>  
    <center>
      <br><br><br><br><br><br>
-       <h1 style="color: black;">About me :</h1>
+       <h1 style="color: white;">About me :</h1>
        <br><br>
-       <a href="https://instagram.com/imxvl_?igshid=YmMyMTA2M2Y=" style="background-color: black;" target="_blank">Instagram</a>
+       <a href="https://instagram.com/imxvl_?igshid=YmMyMTA2M2Y=" style="background-color: white;" target="_blank">Instagram</a>
        <br><br>
-       <a href="https://www.tiktok.com/@hybzaa13?_t=8Wi3WIXG5jt&_r=1" style="background-color: black;" target="_blank">TikTok</a>
+       <a href="https://www.tiktok.com/@hybzaa13?_t=8Wi3WIXG5jt&_r=1" style="background-color: white;" target="_blank">TikTok</a>
        <br><br>
        <br><br>
     
